--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 			<input type="text" id="card-name-input" placeholder="Your Name">
 
 			<div class="date-cvv">
-				<div>
+				<div class="validity">
 					<label for="validity">Expires On:</label>
 					<input type="date" id="validity-input">
 				</div>
-				<div>
+				<div class="cvv">
 					<label for="cvv">CVV</label>
 					<input type="number" id="cvv" placeholder="***">
 				</div>
