--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="date-cvv">
 				<div class="validity">
 					<label for="validity">Expires On:</label>
-					<input type="date" id="validity-input">
+					<input type="date" id="validity-input" placeholder="дд.мм.гггг">
 				</div>
 				<div class="cvv">
 					<label for="cvv">CVV</label>
